@@ -1,0 +1,8 @@
+<header>DNSSEC cryptographic algorithm</header>
+
+The DNSSEC protocol supports several different signing algorithms for keys.
+However, unless you really know what you are doing, you can leave this field
+set to the default of <tt>DSA</tt>. <p>
+
+<footer>
+
