@@ -444,6 +444,11 @@ setup_bindslavepids=Re-starting slave DNS servers ..
 setup_bindeslave=.. some slave servers failed
 setup_bindsub=Adding records to DNS zone $1 ..
 setup_ednssub=Zone $1 does not exist!
+setup_dnssec=Creating DNSSEC key for new domain ..
+setup_enodnssec=.. not supported on this system
+setup_ednssecsize=.. could not compute key size : $1
+setup_ednsseckey=.. key generation failed : $1
+setup_ednssecsign=.. records signing failed : $1
 setup_mysqldb=Creating MySQL database $1 ..
 setup_mysqluser=Creating MySQL login ..
 setup_postgresdb=Creating PostgreSQL database $1 ..
@@ -2385,6 +2390,8 @@ tmpl_replace0=Add above to automatically generated records
 tmpl_replace1=Use only the records above
 tmpl_namedconf=Additional <tt>named.conf</tt> directives for new zones
 tmpl_namedconfbelow=Directives below ..
+tmpl_dnssec=Create DNSSEC key and sign new domains?
+tmpl_dnssec_alg=DNSSEC cryptographic algorithm
 tmpl_alias=Create alias websites by
 tmpl_alias2=Creating ProxyPass virtual host
 tmpl_alias1=Adding ServerAlias to parent
@@ -3823,6 +3830,7 @@ spf_enable=Enabling SPF ..
 spf_disable=Disabling SPF ..
 spf_change=Updating SPF record ..
 spf_header=DNS and Sender Policy Framework options
+spf_header2=DNSSEC zone keys
 spf_enabled=SPF record enabled?
 spf_a=Allowed sender hostnames
 spf_mx=Allowed sender mail domains
@@ -3842,6 +3850,8 @@ spf_einclude='$1' is not a valid domain name to include
 spf_dnsip=IP address for use in DNS records
 spf_default=Same as real address ($1)
 spf_ednsip=Missing or invalid IP address for DNS records
+spf_public=DNSSEC public key
+spf_private=DNSEC private key
 
 s3_emodule=The Perl module $1 needed to communicate with Amazon's S3 service is not installed
 s3_elist=Failed to list S3 buckets : $1
